Fix some bugs due to issue 1

--- a/lab01_04/report/parts/20-analysis.tex
+++ b/lab01_04/report/parts/20-analysis.tex
@@ -49,7 +49,7 @@ y=\sinh(\frac{3x^4 - x + \sqrt{17}-3}{2}) + \sin{\frac{5^\frac{1}{3}x^3-5^\frac{
 \end{table}
 
 \section{Лабораторная работа \No3}
-В таблице \ref{tb:tab3} приведены результаты работы \b{метода квадратичной интерполяции в сочетании с методом золотого сечения}.
+В таблице \ref{tb:tab3} приведены результаты работы \b{метода квадратичной интерполяции в сочетании с методом золотого сечения}. Количество итераций метода золотого сечения --- 6.
 
 \begin{table}[!ht]
 \caption{Результаты работы метода}
@@ -57,11 +57,11 @@ y=\sinh(\frac{3x^4 - x + \sqrt{17}-3}{2}) + \sin{\frac{5^\frac{1}{3}x^3-5^\frac{
 \hline
 \No & Заданная точность & Количество вычислений функции & $x*$ & $f(x*)$\\
 \hline
-1 & 0.01 & 21 & 0.437694 & -0.551147 \\
+1 & 0.01 & 17 & 0.442337 & -0.551190 \\
 \hline
-2 & 0.0001 & 33 & 0.442358 & -0.551190 \\
+2 & 0.0001 & 28 & 0.442365 & -0.551190 \\
 \hline
-3 & 0.000001 & 33 & 0.442358 & -0.551190 \\
+3 & 0.000001 & 28 & 0.442365 & -0.551190 \\
 \hline
 \end{tabular}
 \label{tb:tab3}
