--- a/lab05_07/report/parts/20-analysis.tex
+++ b/lab05_07/report/parts/20-analysis.tex
@@ -1,115 +1,132 @@
 \chapter{Описание задачи}
 \label{cha:analysis}
-
+\section{Часть 1}
 Функция для минимизации (\eqref{F:function}):
 
 \begin{equation}
-y=\sinh(\frac{3x^4 - x + \sqrt{17}-3}{2}) + \sin{\frac{5^\frac{1}{3}x^3-5^\frac{1}{3}x + 1 - 2\cdot 5^\frac{1}{3}}{-x^3+x+2}}.
+y=4 x_{1} x_{2} + 7x_1^2 + 4x_2^2 + 6 \sqrt{5}x_1 -12\sqrt{5}x_2 + 51.
 \label{F:function}
 \end{equation}
 
-Отрезок поиска: $x\in [0,1]$.
+Базовая точка: $x\in [0,-\sqrt{5}]$.
 
-\section{Лабораторная работа \No1}
-В таблице \ref{tb:tab1} приведены результаты работы \b{метода поразрядного поиска}.
+\section{Поиск точки минимума по теоритической формуле}
+Минимум функции достигается при условии:
+\[
+\left\{ 
+\begin{array}{l}
+  \dfrac{\partial f_1}{\partial x_1} = 0 \\
+  \dfrac{\partial f_1}{\partial x_2} = 0 \\
+  \dfrac{\partial^2 f_1}{\partial x_1^2} > 0 \\
+  \dfrac{\partial^2 f_1}{\partial x_2^2} > 0
+\end{array} \right.
+\]
+
+\[
+\left\{ 
+\begin{array}{l l l}
+	4 x_2 + 14 x_1 + 6 \sqrt{5} = 0 \\
+	4 x_1 + 8 x_2 + 6 \sqrt{5} x_1 - 12 \sqrt{12} = 0 \\
+	14 > 0 \\
+	8 > 0
+\end{array} \right.
+\]
+
+Таким образом:
+$X_{min}^T = \left( -\sqrt{5}, - 2 \sqrt{5}\right) \approx (-2.2261 ; -4.4721), f_{min}(X_{min}^T) = -24.00$
+
+\subsection{Лабораторная работа \No5}
+В таблице \ref{tb:tab1} приведены результаты работы \b{метода минимизации по правильному симплексу}. Первоначальная длина ребра симплекса: $a=0.5$.
 
 \begin{table}[!ht]
 \caption{Результаты работы метода}
 \begin{tabular}{|p{0.03\textwidth}|p{0.22\textwidth}|p{0.37\textwidth}|p{0.11\textwidth}|p{0.13\textwidth}|}
 \hline
-\No & Заданная точность & Количество вычислений функции & $x*$ & $f(x*)$\\
+\No & Заданная точность & Количество вычислений функции & $X$ & $f(X)$\\
 \hline
-1 & 0.01 & 15 & 0.453125 & -0.550957 \\
+1 & 0.01 & 33 & [-2.253903, 4.489971] & -23.997773 \\
 \hline
-2 & 0.0001 & 30 & 0.442139 & -0.551190 \\
+2 & 0.0001 & 60 & [-2.234568, 4.470636] & -23.999984\\
 \hline
-3 & 0.000001 & 45 & 0.442368 & -0.551190 \\
+3 & 0.000001 & 85 & [-2.235949, 4.472017] & -24.000000 \\
 \hline
 \end{tabular}
 \label{tb:tab1}
 \end{table}
 
-\section{Лабораторная работа \No2}
-В таблице \ref{tb:tab2} приведены результаты работы \b{метода золотого сечения}.
+\subsection{Лабораторная работа \No6}
+В таблице \ref{tb:tab2} приведены результаты работы \b{метода минимизации по деформируемому симплексу}. Первоначальная длина ребра симплекса: $a=0.5$.
 
 \begin{table}[!ht]
 \caption{Результаты работы метода}
 \begin{tabular}{|p{0.03\textwidth}|p{0.22\textwidth}|p{0.37\textwidth}|p{0.11\textwidth}|p{0.13\textwidth}|}
 \hline
-\No & Заданная точность & Количество вычислений функции & $x*$ & $f(x*)$\\
+\No & Заданная точность & Количество вычислений функции & $X$ & $f(X)$\\
 \hline
-1 & 0.01 & 12 & 0.442719 & -0.551187 \\
+1 & 0.01 & 28 & [-2.242463, 4.523270] & -23.990563 \\
 \hline
-2 & 0.0001 & 22 & 0.442357 & -0.551190 \\
+2 & 0.0001 &39 & [-2.234523, 4.465409]&-23.999844\\
 \hline
-3 & 0.000001 & 31 & 0.442364 & -0.551190 \\
+3 & 0.000001 & 58 & [-2.236333, 4.471860] & -23.999999\\
 \hline
 \end{tabular}
 \label{tb:tab2}
 \end{table}
 
-\section{Лабораторная работа \No3}
-В таблице \ref{tb:tab3} приведены результаты работы \b{метода квадратичной интерполяции в сочетании с методом золотого сечения}. Количество итераций метода золотого сечения --- 4.
+\subsection{Лабораторная работа \No7}
+В таблице \ref{tb:tab3} приведены результаты работы \b{метода случайного поиска с возвратом}. Количество итераций --- 500.
 
 \begin{table}[!ht]
 \caption{Результаты работы метода}
 \begin{tabular}{|p{0.03\textwidth}|p{0.22\textwidth}|p{0.37\textwidth}|p{0.11\textwidth}|p{0.13\textwidth}|}
 \hline
-\No & Заданная точность & Количество вычислений функции & $x*$ & $f(x*)$\\
+\No & Заданная точность & Количество вычислений функции & $X$ & $f(X)$\\
 \hline
-1 & 0.01 & 13 & 0.441913 & -0.551190 \\
+1 & 0.01 & 191 & [-2.232891, 4.473895] & -23.999895 \\
 \hline
-2 & 0.0001 & 19 & 0.442360 & -0.551190 \\
+2 & 0.0001 & 245 & [-2.236072, 4.472086] & -24.000000 \\
 \hline
-3 & 0.000001 & 25 & 0.442364 & -0.551190 \\
+3 & 0.000001 & 339 & [-2.236068, 4.472136] & -24.000000 \\
 \hline
 \end{tabular}
 \label{tb:tab3}
 \end{table}
 
-\section{Лабораторная работа \No4}
-В таблице \ref{tb:tab4} приведены результаты работы \b{модифицированного метода Ньютона}.
 
-\begin{table}[!ht]
-\caption{Результаты работы метода}
-\begin{tabular}{|p{0.03\textwidth}|p{0.22\textwidth}|p{0.37\textwidth}|p{0.11\textwidth}|p{0.13\textwidth}|}
-\hline
-\No & Заданная точность & Количество вычислений функции & $x*$ & $f(x*)$\\
-\hline
-1 & 0.01 & 12 & 0.442370 & -0.551185 \\
-\hline
-2 & 0.0001 & 15 & 0.442364 & -0.551190 \\
-\hline
-3 & 0.000001 & 18 & 0.442364 & -0.551190 \\
-\hline
-\end{tabular}
-\label{tb:tab4}
-\end{table}
-
-
-
-\section{Сводная таблица}
+\subsection{Сводная таблица}
 В таблице представлены результаты работы рассмотренных методов для точности $0.000001$.
 
 \begin{table}[!ht]
 \caption{Сводная таблица результатов работы методов}
 \begin{tabular}{|p{0.03\textwidth}|p{0.39\textwidth}|p{0.20\textwidth}|p{0.11\textwidth}|p{0.13\textwidth}|}
 \hline
-\No & Метод & Количество вычислений функции & $x*$ & $f(x*)$\\
+\No & Метод & Количество вычислений функции & $X$ & $f(X)$\\
 \hline
-1 & поразрядного поиска & 45 & 0.442368 & -0.551190 \\
+1 & правильный симплекс & 85 & [-2.235949, 4.472017] & -24.000000 \\
 \hline
-2 & золотого сечения & 31 & 0.442364 & -0.551190 \\
+2 & деформируемый симплекс & 58 & 0.[-2.236333, 4.471860] & -23.999999 \\
 \hline
-3 & квадратичной интерполяции в сочетании с методом золотого сечения &  25 & 0.442364 & -0.551190 \\
+3 & случайного поиска с возвратом &  316 & [-2.236068, 4.472136] & -24.000000 \\
 \hline
-4 & модифицированный метод Ньютона & 18 & 0.442364 & -0.551190 \\
-\hline
-5 & fminbnd & 12 & 0.442364 & -0.551190 \\
+5 & fminsearch & 155 & [-2.236068, 4.472136] & -24.000000 \\
 \hline
 \end{tabular}
 \label{tb:tab4}
 \end{table}
+
+
+\section{Часть 2}
+Функция для минимизации (\eqref{F:function2}):
+
+\begin{equation}
+y=x_{2}^3 + 2x_1x_2 + \frac{1}{\sqrt{x_1x_2}}.
+\label{F:function2}
+\end{equation}
+
+Базовая точка: $X = (3,3)$.
+
+Устранение разрыва функции производится путём замены аргумента, при выполнении условия $|x_i| < \varepsilon$, на константное значение $\varepsilon$, где $\varepsilon = 1e-1$. При $x_1 \times x_2 < 0$ значение функции устанавливается равным $45$.
+
 
 %
 % % В начале раздела  можно напомнить его цель
