--- a/lab05_07/report/parts/20-analysis.tex
+++ b/lab05_07/report/parts/20-analysis.tex
@@ -127,6 +127,67 @@ y=x_{2}^3 + 2x_1x_2 + \frac{1}{\sqrt{x_1x_2}}.
 
 Устранение разрыва функции производится путём замены аргумента, при выполнении условия $|x_i| < \varepsilon$, на константное значение $\varepsilon$, где $\varepsilon = 1e-1$. При $x_1 \times x_2 < 0$ значение функции устанавливается равным $45$.
 
+В таблице \ref{tb:tab21} представлены результаты работы рассмотренных методов для точности $0.01$.
+
+\begin{table}[!ht]
+\caption{Сводная таблица результатов работы методов}
+\begin{tabular}{|p{0.03\textwidth}|p{0.39\textwidth}|p{0.20\textwidth}|p{0.11\textwidth}|p{0.13\textwidth}|}
+\hline
+\No & Метод & Количество вычислений функции & $X$ & $f(X)$\\
+\hline
+1 & правильный симплекс & 25 & [2.794894, 0.143244] & 2.384087 \\
+\hline
+2 & деформируемый симплекс & 24 & 0.[2.465024, 0.166927] & 2.38653 \\
+\hline
+3 & случайного поиска с возвратом &  114 & [1.615551, 0.235544] & 2.395212 \\
+\hline
+5 & fminsearch & 82 & [3.970522, 0.100013] & 2.382102 \\
+\hline
+\end{tabular}
+\label{tb:tab21}
+\end{table}
+
+В таблице \ref{tb:tab22} представлены результаты работы рассмотренных методов для точности $0.0001$.
+
+\begin{table}[!ht]
+\caption{Сводная таблица результатов работы методов}
+\begin{tabular}{|p{0.03\textwidth}|p{0.39\textwidth}|p{0.20\textwidth}|p{0.11\textwidth}|p{0.13\textwidth}|}
+\hline
+\No & Метод & Количество вычислений функции & $X$ & $f(X)$\\
+\hline
+1 & правильный симплекс & 37 & [2.794894, 0.143244] & 2.384087 \\
+\hline
+2 & деформируемый симплекс & 30 & 0.[2.465024, 0.166927] & 2.386538 \\
+\hline
+3 & случайного поиска с возвратом &  559 & [1.877914, 0.206477] & 2.390224 \\
+\hline
+5 & fminsearch & 143 & [3.968544, 0.100000] & 2.382102 \\
+\hline
+\end{tabular}
+\label{tb:tab22}
+\end{table}
+
+
+В таблице \ref{tb:tab23} представлены результаты работы рассмотренных методов для точности $0.000001$.
+
+\begin{table}[!ht]
+\caption{Сводная таблица результатов работы методов}
+\begin{tabular}{|p{0.03\textwidth}|p{0.39\textwidth}|p{0.20\textwidth}|p{0.11\textwidth}|p{0.13\textwidth}|}
+\hline
+\No & Метод & Количество вычислений функции & $X$ & $f(X)$\\
+\hline
+1 & правильный симплекс & 76 & [2.801648, 0.140676] & 2.383914 \\
+\hline
+2 & деформируемый симплекс & 110 & 0.[[3.962550, 0.100045] & 2.382104 \\
+\hline
+3 & случайного поиска с возвратом &  1704 & [1.390272, 0.270747] & 2.402598 \\
+\hline
+5 & fminsearch & 207 & [3.968503, 0.100000] & 2.382102 \\
+\hline
+\end{tabular}
+\label{tb:tab23}
+\end{table}
+
 
 %
 % % В начале раздела  можно напомнить его цель
