--- a/lab08_10/report/parts/20-analysis.tex
+++ b/lab08_10/report/parts/20-analysis.tex
@@ -35,154 +35,60 @@ y=4 x_{1} x_{2} + 7x_1^2 + 4x_2^2 + 6 \sqrt{5}x_1 -12\sqrt{5}x_2 + 51.
 Таким образом:
 $X_{min}^T = \left( -\sqrt{5}, - 2 \sqrt{5}\right) \approx (-2.2261 ; -4.4721), f_{min}(X_{min}^T) = -24.00$
 
-\subsection{Лабораторная работа \No5}
+\subsection{Результаты расчетов}
 В таблице \ref{tb:tab1} приведены результаты работы \b{метода минимизации по правильному симплексу}. Первоначальная длина ребра симплекса: $a=0.5$.
 
 \begin{table}[!ht]
 \caption{Результаты работы метода}
-\begin{tabular}{|p{0.03\textwidth}|p{0.22\textwidth}|p{0.37\textwidth}|p{0.11\textwidth}|p{0.13\textwidth}|}
+\begin{tabular}{|p{0.15\textwidth}|p{0.15\textwidth}|p{0.15\textwidth}|p{0.25\textwidth}|p{0.13\textwidth}|}
 \hline
-\No & Заданная точность & Количество вычислений функции & $X$ & $f(X)$\\
+Метод & Точность& Количество вычислений функции & $X$ & $f(X)$\\
 \hline
-1 & 0.01 & 33 & [-2.253903, 4.489971] & -23.997773 \\
+метод & 0.01 & 161 & [-2.236068, 4.472136] & -24.000000 \\
+сопряженных & 0.0001 & 161 & [-2.236068, 4.472136] & -24.000000\\
+градиентов & 0.000001 & 161 & [-2.236068, 4.472136]  & -24.000000 \\
 \hline
-2 & 0.0001 & 60 & [-2.234568, 4.470636] & -23.999984\\
+метод & 0.01 & 21 & [-2.236068, 4.472136] & -24.000000 \\
+Ньютона & 0.0001 & 21 & [-2.236068, 4.472136] & -24.000000\\
+ & 0.000001 & 21 & [-2.236068, 4.472136] & -24.000000\\
 \hline
-3 & 0.000001 & 85 & [-2.235949, 4.472017] & -24.000000 \\
+& 0.01 & 164 & [-2.236068, 4.472136] & -24.000000\\
+ДФП& 0.0001 & 164 & [-2.236068, 4.472136] & -24.000000\\
+& 0.000001 & 164 & [-2.236068, 4.472136] & -24.000000\\
+\hline
+& 0.01 & 101 & [-2.237092, 4.475051] & -23.999971 \\
+fminsearch& 0.0001 & 127 & [-2.236047, 4.472151] & -24.000000\\
+& 0.000001 & 151 & [-2.236047, 4.472151] & -24.000000 \\
 \hline
 \end{tabular}
 \label{tb:tab1}
 \end{table}
 
-\subsection{Лабораторная работа \No6}
-В таблице \ref{tb:tab2} приведены результаты работы \b{метода минимизации по деформируемому симплексу}. Первоначальная длина ребра симплекса: $a=0.5$.
-
-\begin{table}[!ht]
-\caption{Результаты работы метода}
-\begin{tabular}{|p{0.03\textwidth}|p{0.22\textwidth}|p{0.37\textwidth}|p{0.11\textwidth}|p{0.13\textwidth}|}
-\hline
-\No & Заданная точность & Количество вычислений функции & $X$ & $f(X)$\\
-\hline
-1 & 0.01 & 28 & [-2.242463, 4.523270] & -23.990563 \\
-\hline
-2 & 0.0001 &39 & [-2.234523, 4.465409]&-23.999844\\
-\hline
-3 & 0.000001 & 58 & [-2.236333, 4.471860] & -23.999999\\
-\hline
-\end{tabular}
-\label{tb:tab2}
-\end{table}
-
-\subsection{Лабораторная работа \No7}
-В таблице \ref{tb:tab3} приведены результаты работы \b{метода случайного поиска с возвратом}. Количество итераций --- 500.
-
-\begin{table}[!ht]
-\caption{Результаты работы метода}
-\begin{tabular}{|p{0.03\textwidth}|p{0.22\textwidth}|p{0.37\textwidth}|p{0.11\textwidth}|p{0.13\textwidth}|}
-\hline
-\No & Заданная точность & Количество вычислений функции & $X$ & $f(X)$\\
-\hline
-1 & 0.01 & 191 & [-2.232891, 4.473895] & -23.999895 \\
-\hline
-2 & 0.0001 & 245 & [-2.236072, 4.472086] & -24.000000 \\
-\hline
-3 & 0.000001 & 339 & [-2.236068, 4.472136] & -24.000000 \\
-\hline
-\end{tabular}
-\label{tb:tab3}
-\end{table}
-
-
-\subsection{Сводная таблица}
-В таблице представлены результаты работы рассмотренных методов для точности $0.000001$.
-
-\begin{table}[!ht]
-\caption{Сводная таблица результатов работы методов}
-\begin{tabular}{|p{0.03\textwidth}|p{0.39\textwidth}|p{0.20\textwidth}|p{0.11\textwidth}|p{0.13\textwidth}|}
-\hline
-\No & Метод & Количество вычислений функции & $X$ & $f(X)$\\
-\hline
-1 & правильный симплекс & 85 & [-2.235949, 4.472017] & -24.000000 \\
-\hline
-2 & деформируемый симплекс & 58 & 0.[-2.236333, 4.471860] & -23.999999 \\
-\hline
-3 & случайного поиска с возвратом &  316 & [-2.236068, 4.472136] & -24.000000 \\
-\hline
-5 & fminsearch & 155 & [-2.236068, 4.472136] & -24.000000 \\
-\hline
-\end{tabular}
-\label{tb:tab4}
-\end{table}
-
-
 \section{Часть 2}
-Функция для минимизации (\eqref{F:function2}):
-
-\begin{equation}
-y=x_{2}^3 + 2x_1x_2 + \frac{1}{\sqrt{x_1x_2}}.
-\label{F:function2}
-\end{equation}
-
-Базовая точка: $X = (3,3)$.
-
-Устранение разрыва функции производится путём замены аргумента, при выполнении условия $|x_i| < \varepsilon$, на константное значение $\varepsilon$, где $\varepsilon = 1e-1$. При $x_1 \times x_2 < 0$ значение функции устанавливается равным $45$.
-
-В таблице \ref{tb:tab21} представлены результаты работы рассмотренных методов для точности $0.01$.
-
-\begin{table}[!ht]
-\caption{Сводная таблица результатов работы методов}
-\begin{tabular}{|p{0.03\textwidth}|p{0.39\textwidth}|p{0.20\textwidth}|p{0.11\textwidth}|p{0.13\textwidth}|}
-\hline
-\No & Метод & Количество вычислений функции & $X$ & $f(X)$\\
-\hline
-1 & правильный симплекс & 25 & [2.794894, 0.143244] & 2.384087 \\
-\hline
-2 & деформируемый симплекс & 24 & 0.[2.465024, 0.166927] & 2.38653 \\
-\hline
-3 & случайного поиска с возвратом &  114 & [1.615551, 0.235544] & 2.395212 \\
-\hline
-5 & fminsearch & 82 & [3.970522, 0.100013] & 2.382102 \\
-\hline
-\end{tabular}
-\label{tb:tab21}
-\end{table}
-
-В таблице \ref{tb:tab22} представлены результаты работы рассмотренных методов для точности $0.0001$.
-
-\begin{table}[!ht]
-\caption{Сводная таблица результатов работы методов}
-\begin{tabular}{|p{0.03\textwidth}|p{0.39\textwidth}|p{0.20\textwidth}|p{0.11\textwidth}|p{0.13\textwidth}|}
-\hline
-\No & Метод & Количество вычислений функции & $X$ & $f(X)$\\
-\hline
-1 & правильный симплекс & 37 & [2.794894, 0.143244] & 2.384087 \\
-\hline
-2 & деформируемый симплекс & 30 & 0.[2.465024, 0.166927] & 2.386538 \\
-\hline
-3 & случайного поиска с возвратом &  559 & [1.877914, 0.206477] & 2.390224 \\
-\hline
-5 & fminsearch & 143 & [3.968544, 0.100000] & 2.382102 \\
-\hline
-\end{tabular}
-\label{tb:tab22}
-\end{table}
-
 
 В таблице \ref{tb:tab23} представлены результаты работы рассмотренных методов для точности $0.000001$.
 
 \begin{table}[!ht]
-\caption{Сводная таблица результатов работы методов}
-\begin{tabular}{|p{0.03\textwidth}|p{0.39\textwidth}|p{0.20\textwidth}|p{0.11\textwidth}|p{0.13\textwidth}|}
+\caption{Результаты работы метода}
+\begin{tabular}{|p{0.15\textwidth}|p{0.15\textwidth}|p{0.15\textwidth}|p{0.25\textwidth}|p{0.13\textwidth}|}
 \hline
-\No & Метод & Количество вычислений функции & $X$ & $f(X)$\\
+Метод & Точность& Количество вычислений функции & $X$ & $f(X)$\\
 \hline
-1 & правильный симплекс & 76 & [2.801648, 0.140676] & 2.383914 \\
+метод & 0.01 & 79 & [2.487193, 0.157994] & 2.385103 \\
+сопряженных & 0.0001 & 191 & [2.494021, 0.156760] & 2.385086\\
+градиентов & 0.000001 & 2065 & [9.520215, 0.041673] & 2.381174 \\
 \hline
-2 & деформируемый симплекс & 110 & 0.[[3.962550, 0.100045] & 2.382104 \\
+метод & 0.01 & 94 & [8.994507, 0.044107] & 2.381187\\
+Ньютона & 0.0001 & 107 & [9.109737, 0.043562] & 2.381184\\
+ & 0.000001 & 328 & [10.501650, 0.037791] & 2.381156 \\
 \hline
-3 & случайного поиска с возвратом &  1704 & [1.390272, 0.270747] & 2.402598 \\
+& 0.01 & 81 & [2.487193, 0.157994] & 2.385103\\
+ДФП& 0.0001 & 81 & [2.487193, 0.157994] & 2.385103\\
+& 0.000001 & 81 & [2.487193, 0.157994] & 2.385103 \\
 \hline
-5 & fminsearch & 207 & [3.968503, 0.100000] & 2.382102 \\
+& 0.01 & 401 & [21.717703, 0.018274] & 2.381108 \\
+fminsearch& 0.0001 & 401 & [21.717703, 0.018274] & 2.381108 \\
+& 0.000001 & 401 & [21.717703, 0.018274] & 2.381108 \\
 \hline
 \end{tabular}
 \label{tb:tab23}
